--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="edit_task_target_time" translatable="false">목표시간 설정</string>
     <string name="done" translatable="false">Done</string>
     <string name="modify_task_title" translatable="false">Task명 수정</string>
+    <string name="custom_color">커스텀컬러</string>
+    <string name="background">배경</string>
+    <string name="text">텍스트</string>
 </resources>
