--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="background">배경</string>
     <string name="text">텍스트</string>
     <string name="setting_background_text">해당 색상을 배경색으로 설정하시겠습니까?</string>
+    <string name="add_daily_title">새로운 기록 설정</string>
+    <string name="add_daily_message">%1$s 목표시간 설정</string>
 </resources>
