#26 feat : 타이머 종료에 따른 종료 텍스트 및 startDestination 로직 구현

--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="daily_task_check_title">Task와 Daily를 확인해주세요.</string>
     <string name="daily_check_title">Daily를 생성해주세요.</string>
     <string name="task_check_title">Task를 선택해주세요.</string>
+    <string name="finish_text">종료</string>
 </resources>
