--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -37,4 +37,11 @@
     <string name="stopwatch_alarm_message">시간 경과되었습니다.</string>
     <string name="alarm_permission_title">알람을 설정하기 위해 권한이 필요로 합니다.</string>
     <string name="alarm_permission_message">설정하러 가시겠습니까?</string>
+
+    <string name="log_setting_color_title">컬러</string>
+    <string name="log_setting_color_message">그래프의 컬러를 설정 합니다</string>
+    <string name="log_setting_color_direction_title">컬러 방향</string>
+    <string name="log_setting_color_direction_message">컬러 조합의 방향을 설정 합니다</string>
+    <string name="log_setting_goal_time_title">목표 시간</string>
+    <string name="log_setting_goal_time_message">원형 프로그래스바의 목표 시간을 설정 합니다</string>
 </resources>
