--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="setting_background_text">해당 색상을 배경색으로 설정하시겠습니까?</string>
     <string name="add_daily_title">새로운 기록 설정</string>
     <string name="add_daily_message">%1$s 목표시간 설정</string>
+    <string name="edit_daily_title">목표시간 수정</string>
+    <string name="edit_daily_message">%1$s 목표시간 수정</string>
     <string name="set_timer_time_title">타이머 시간 설정</string>
     <string name="set_timer_time_message">종료예정 : %1$s</string>
     <string name="daily_task_check_title">Task와 Daily를 확인해주세요.</string>
