--- a/core/designsystem/src/main/res/values-zh/strings.xml
+++ b/core/designsystem/src/main/res/values-zh/strings.xml
@@ -61,4 +61,7 @@
     <string name="setting_text_notification">告示</string>
     <string name="measure_text_measuring">测量正在进行中.</string>
     <string name="toast_text_startrecording">开始录制!</string>
+    <string name="setting_text_develop">"开发者 "</string>
+    <string name="recording_text_setnewrecordtitle">新建日志设置</string>
+    <string name="settings_text_dailyeditcreate">"每日修改/创建 "</string>
 </resources>
