--- a/core/designsystem/src/main/res/values-zh/strings.xml
+++ b/core/designsystem/src/main/res/values-zh/strings.xml
@@ -67,4 +67,7 @@
     <string name="edit_text_duplicatehistory">重复的历史存在。</string>
     <string name="setting_text_language">语言</string>
     <string name="setting_text_system">系统</string>
+    <string name="setting_text_korean">韩国语</string>
+    <string name="setting_text_english">英语</string>
+    <string name="setting_text_china">中国话</string>
 </resources>
